fix: text alignment

--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -135,6 +135,7 @@
 
 .context-container {
   margin-top: 48px;
+  text-align: start;
 }
 
 .accordion-image {
